# LearnTimeSeries

./: README.md  pyproject.toml
Excercise/: 01.Linear_regression_ts.ipynb  02.Trend.ipynb  03.Seasonality.ipynb  04.Time_series_as_features.ipynb
Lessons/: 01.Linear_regression_ts.ipynb  02.Trend.ipynb  03.Seasonality.ipynb  04.Time_series_as_features.ipynb
