[tool.poetry]
name = "learntimeseries"
version = "0.1.0"
description = ""
authors = ["Pengfei Liu <liu.pengfei@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
jupyter = "^1.0.0"
seaborn = "^0.11.2"
matplotlib = "^3.5.2"
scikit-learn = "^1.1.1"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
